# e-paper_clock_esp32

./: .gitignore  README.md
hardware/: README.md  e-paper_clock_esp32.kicad_pcb  e-paper_clock_esp32.pro  e-paper_clock_esp32.sch
software/: .cproject  sdkconfig
software/components/: README.md
software/main/: CMakeLists.txt  Kconfig  battery.h  bma220.c  bma220.h  e-paper_clock_esp32_main.c  epd_lut.h  font_set.h  i2c_master.c  i2c_master.h  lang.h  owm_forecast.c  owm_forecast.h  owm_forecast_icons.h  secrets.h
software/main/fonts/: NewtSerif260px.c  NewtSerif300px.c  NewtSerif54px.c  Ribeye230px.c  Ribeye260px.c  Ribeye48px.c  Ribeye_OFL.txt  TitilliumWeb230px.c  TitilliumWeb260px.c  TitilliumWeb48px.c  Yrsa280px.c  Yrsa330px.c  Yrsa48px.c  opensansb16px.c  opensansb20px.c  opensansb24px.c
software/main/icons/: battery_charging.c  battery_empty.c  battery_full.c  battery_half.c  battery_quater.c  battery_three_quaters.c  battery_unknown.c  d01.c  d02.c  d03.c  d04.c  d09.c  d10.c  d11.c  d13.c  d50.c  n01.c  n02.c  n03.c  n04.c  n09.c  n10.c  n11.c  n13.c  n50.c  white.c
