idf_component_register(SRCS "e-paper_clock_esp32_main.c" 
                        "i2c_master.c" 
                        "bma220.c"
                        "owm_forecast.c"
                        "fonts/Ribeye230px.c"
                        "fonts/Ribeye260px.c"
                        "fonts/Ribeye48px.c"
                        "fonts/NewtSerif260px.c"
                        "fonts/NewtSerif300px.c"
                        "fonts/NewtSerif54px.c"
                        "fonts/TitilliumWeb230px.c"
                        "fonts/TitilliumWeb260px.c"
                        "fonts/TitilliumWeb48px.c"
                        "fonts/Yrsa280px.c"
                        "fonts/Yrsa330px.c"
                        "fonts/Yrsa48px.c"
                        "fonts/opensansb16px.c"
                        "fonts/opensansb20px.c"
                        "icons/d01.c"
                        "icons/d02.c"
                        "icons/d03.c"
                        "icons/d04.c"
                        "icons/d09.c"
                        "icons/d10.c"
                        "icons/d11.c"
                        "icons/d13.c"
                        "icons/d50.c"
                        "icons/n01.c"
                        "icons/n02.c"
                        "icons/n03.c"
                        "icons/n04.c"
                        "icons/n09.c"
                        "icons/n10.c"
                        "icons/n11.c"
                        "icons/n13.c"
                        "icons/n50.c"
                        "icons/white.c"
                        "icons/battery_unknown.c"
                        "icons/battery_charging.c"
                        "icons/battery_empty.c"
                        "icons/battery_quater.c"
                        "icons/battery_half.c"
                        "icons/battery_three_quaters.c"
                        "icons/battery_full.c"
                    INCLUDE_DIRS "")
